<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context=".MainActivity"> <!-- make sure to change this line -->

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/radioGroupLabel"
    android:id="@+id/textView"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"/>

<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textView"
    android:layout_alignParentStart="true"
    android:id="@+id/shapeRadioGroup">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/triangleStr"
        android:id="@+id/triangleRadioButton"
        android:checked="false"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/circleStr"
        android:id="@+id/circleRadioButton"
        android:checked="false" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ellipseStr"
        android:id="@+id/ellipseRadioButton"
        android:checked="false"/>
</RadioGroup>

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/mainButtonLabel"
    android:id="@+id/calcButton"
    android:layout_below="@+id/shapeRadioGroup"
    android:layout_alignParentStart="true"
    android:layout_marginTop="53dp"
    android:onClick="goCalculate" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:id="@+id/areaTextView"
    android:layout_below="@+id/calcButton"
    android:layout_alignParentStart="true"
    android:layout_marginTop="53dp"
    android:hint="@string/mainHint"/>

</RelativeLayout>